<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.gitce.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_miembros"
        android:name="com.example.gitce.MiembrosFragment"
        android:label="@string/menu_miembros"
        tools:layout="@layout/fragment_miembros" />

    <fragment
        android:id="@+id/nav_noticias"
        android:name="com.example.gitce.NoticiasFragment"
        android:label="@string/menu_noticias"
        tools:layout="@layout/fragment_noticias" />

    <fragment
        android:id="@+id/nav_proyectos"
        android:name="com.example.gitce.ProyectosFragment"
        android:label="@string/menu_proyectos"
        tools:layout="@layout/fragment_proyectos" />

    <fragment
        android:id="@+id/nav_publicaciones"
        android:name="com.example.gitce.PublicacionesFragment"
        android:label="@string/menu_publicaciones"
        tools:layout="@layout/fragment_publicaciones" />
</navigation>