<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.AcercadeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Objetivo General"
                android:textSize="30dp" />

            <com.codesgood.views.JustifiedTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Ogeneral"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Objetivo Especifico"
                android:textSize="30dp" />

            <com.codesgood.views.JustifiedTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/Oespecifico"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Vision"
                android:textSize="30dp" />

            <com.codesgood.views.JustifiedTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/vision"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Mision"
                android:textSize="30dp" />

            <com.codesgood.views.JustifiedTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/mision"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Metas"
                android:textSize="30dp" />

            <com.codesgood.views.JustifiedTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/metas"
                android:textSize="15sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>